<resources>
    <string name="app_name">RPLdanANDROID</string>
    <string name="myevent_text">EXHIBITION</string>
    <string name="exhibition_text">Exhibition</string>
    <string name="detail_event1">Pameran Titik Tahun 2</string>
    <string name="ad_firaous">by AD Firaous</string>
    <string name="feb">28 Februari 2021</string>
    <string name="padepokan_seni">Padepokan Seni Mayang</string>
    <string name="view_jam">12.00 WIB | Available</string>
    <string name="free_entry">Free Entry!</string>
    <string name="text_going">Attend</string>
    <string name="pameran_titik_2">Pameran Titik Tahun 2</string>
    <string name="ad_firaous_2">by AD Firaous</string>
    <string name="feb_2">FEB</string>
    <string name="tanggal_28_2">28</string>
    <string name="padepokan_seni_2">Padepokan Seni Mayang</string>
    <string name="jam_2">12.00 WIB | Available</string>
    <string name="free_entry_2">Free Entry!</string>
    <string name="text_cancel">Cancel</string>
    <string name="going_event">Going To This Event?</string>
    <string name="cancel_text">Are Sure To Cancel This Event?</string>
    <string name="going_popup">Going to This Event?</string>
    <string name="yes_text_cancel">Yes</string>
    <string name="no_text_cancel">No</string>
    <string name="allev_text">All Event</string>
    <string name="music_text">Music</string>
    <string name="edu_text">Education</string>
    <string name="art_text">Exhibition</string>
    <string name="yes_text">Yes</string>
    <string name="no_text">No</string>
    <string name="tangtangan_bisnis">Menghadapi Tangtangan Bisnis 2020</string>
    <string name="hosted_by">Hosted By: insightTDay</string>
    <string name="person_text">100</string>
    <string name="jam_text_hmpg">08.00 - selesai</string>
    <string name="tanggal_text_hmpg">15</string>
    <string name="bulan_text_hmpg">FEB</string>
    <string name="text_desc">Description About Pameran Titik Tahun 2</string>
    <string name="text_desc2">Description About Pameran Titik Tahun 2</string>
    <string name="text_myevent2">myEVENT</string>
    <string name="text_eventforyou">Event For You</string>
    <string name="text_bestevent">Best on Trending Event</string>
    <string name="text_myevent3">myEVENT</string>
    <string name="text_started">Lets Attend Your Favourite Event</string>
    <string name="text_getstarted">Get Started</string>
    <string name="text_title4">myEVENT</string>
    <string name="text_login">Welcome Back</string>
    <string name="email_address">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="text_forgot">Forgot Password?</string>
    <string name="remember_me">Remember Me</string>
    <string name="text_login2">Login To My Account</string>
    <string name="text_regist">Don\'t Have An Account?</string>
    <string name="text_regist2">Regist Here</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="bt_sign_out">Sign Out</string>
    <string name="text_deskripsi1">Pameran Titik Tahun 2 adalah pameran seni rupa dunia terbesar dunia yang bakal digelar Kota Bandung Acara ini diselenggarakan pada tanggal 28 Februari 2020 pukul 12.00 WIB di Padepokan Seni Mayang</string>
    <string name="title_art">Pameran Titik Tahun 2</string>
    <string name="almat_art">Bale Tonggoh, Selasar Sunarya</string>
    <string name="tanggal_art">16 Oktober 2020</string>
    <string name="tersedia_art">20</string>
    <string name="biaya_art">Free Entry</string>
    <string name="image_art">Image Art</string>
    <string name="username">Username</string>
    <string name="address">Address</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="text_bahasa">Bahasa</string>
    <string name="text_setting">PENGATURAN</string>
    <string name="text_tema">Tema</string>

    <string-array name="bahasa_arrays">
        <item>Indonesia</item>
        <item>English</item>
        <item>한국어</item>
        <item>عربى</item>
    </string-array>


</resources>
