<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="#FFFFFF">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="#F5F5F7"
        android:layout_marginBottom="0dp">
        
        <ImageView
            android:id="@+id/image_art"
            android:layout_width="90dp"
            android:layout_height="125dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:scaleType="fitXY"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="0dp"/>

        <RelativeLayout
            android:id="@+id/artDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="107dp"
            android:layout_marginBottom="0dp"
            android:layout_toEndOf="@+id/image_art"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="107dp"
            android:layout_toRightOf="@+id/image_art">

            <TextView
                android:id="@+id/title_art"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_art"
                android:textColor="#000000"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/alamat_art"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/title_art"
                android:layout_marginTop="2dp"
                android:text="@string/almat_art"
                android:textColor="#000000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tanggal_art"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/alamat_art"
                android:layout_marginTop="2dp"
                android:text="@string/tanggal_art"
                android:textColor="#000000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tersedia_art"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tanggal_art"
                android:layout_marginTop="2dp"
                android:text="@string/tersedia_art"
                android:textColor="#000000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/biaya_art"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tersedia_art"
                android:layout_marginTop="2dp"
                android:text="@string/biaya_art"
                android:textColor="#000000"
                android:textSize="15sp" />

        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>