<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_event_two"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".DetailEventTwo">

    <View
        android:id="@+id/view_bigevent2"
        android:layout_width="428dp"
        android:layout_height="303dp"
        android:layout_marginBottom="368dp"
        android:background="@drawable/ic_bigevent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view_tanggal_2"
        android:layout_width="335dp"
        android:layout_height="175dp"
        android:background="@drawable/ic_tanggal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.371" />

    <TextView
        android:id="@+id/text_pameran_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pameran_titik_2"
        android:textColor="#393939"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.256"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.302" />

    <TextView
        android:id="@+id/text_author_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ad_firaous_2"
        android:textColor="#393939"
        android:textSize="15sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.163"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.341" />

    <ImageView
        android:id="@+id/view_jadwal_2"
        android:layout_width="71dp"
        android:layout_height="69dp"
        android:background="#B8B8B8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.152"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.444"
        app:srcCompat="@drawable/ic_tanggal" />

    <TextView
        android:id="@+id/text_bulan_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feb_2"
        android:textColor="#FF9900"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.189"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.428" />

    <TextView
        android:id="@+id/text_tanggal_2"
        android:layout_width="25dp"
        android:layout_height="24dp"
        android:gravity="center"
        android:text="@string/tanggal_28_2"
        android:textColor="#393939"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.189"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.478" />

    <TextView
        android:id="@+id/text_lokasi_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/padepokan_seni_2"
        android:textColor="#FF9B00"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.63"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.341" />

    <ImageView
        android:id="@+id/view_jam_2"
        android:layout_width="21dp"
        android:layout_height="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.369"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.408"
        app:srcCompat="@drawable/ic_jam" />

    <TextView
        android:id="@+id/text_jam_2"
        android:layout_width="139dp"
        android:layout_height="20dp"
        android:text="@string/jam_2"
        android:textColor="#393939"
        android:textSize="15sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.606"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.406" />

    <ImageView
        android:id="@+id/free_entry_2"
        android:layout_width="189dp"
        android:layout_height="84dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.486"
        app:srcCompat="@drawable/ic_hadircancel" />

    <ImageButton
        android:id="@+id/buttoncancel"
        android:layout_width="172dp"
        android:layout_height="80dp"
        android:background="#FFFFFF"
        android:onClick="ButtonCancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.975"
        app:srcCompat="@drawable/ic_hadircancel" />

    <TextView
        android:id="@+id/text_free_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/free_entry_2"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/free_entry_2"
        app:layout_constraintEnd_toEndOf="@+id/free_entry_2"
        app:layout_constraintStart_toStartOf="@+id/free_entry_2"
        app:layout_constraintTop_toBottomOf="@+id/text_jam_2" />

    <TextView
        android:id="@+id/text_going_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_cancel"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/buttoncancel"
        app:layout_constraintEnd_toEndOf="@+id/buttoncancel"
        app:layout_constraintStart_toStartOf="@+id/buttoncancel"
        app:layout_constraintTop_toTopOf="@+id/buttoncancel"
        app:layout_constraintVertical_bias="0.416" />

    <ImageView
        android:id="@+id/image_bck2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="ButtonBack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.125"
        app:srcCompat="@drawable/ic_back2" />

    <ImageView
        android:id="@+id/image_desc2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.621"
        app:srcCompat="@drawable/ic_judul" />

    <TextView
        android:id="@+id/text_desc2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_desc2"
        android:textColor="#1A1A1A"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.744"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.621" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_bartop" />

    <TextView
        android:id="@+id/text_deskripsi2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_deskripsi1"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="15sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/buttoncancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_desc2" />

</androidx.constraintlayout.widget.ConstraintLayout>