<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Homepage">

    <TextView
        android:id="@+id/text_title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_myevent2"
        android:textColor="#FF9900"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.075" />

    <com.smarteist.autoimageslider.SliderLayout
        android:id="@+id/imageSlider"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.22" />

    <ImageButton
        android:id="@+id/bt_signout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:onClick="ButtonSignOut"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.875"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.074"
        app:srcCompat="@android:drawable/ic_lock_power_off" />

    <ImageView
        android:id="@+id/image_bartop2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_bartop" />

    <ImageButton
        android:id="@+id/bt_allev"
        android:layout_width="84dp"
        android:layout_height="80dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.165"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageSlider"
        app:layout_constraintVertical_bias="0.054"
        app:srcCompat="@drawable/ic_allev" />

    <TextView
        android:id="@+id/text_Art"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/art_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bt_music"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.854"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_art"
        app:layout_constraintVertical_bias="0.216" />

    <TextView
        android:id="@+id/text_edu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edu_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.163"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_edu"
        app:layout_constraintVertical_bias="0.155" />

    <ImageButton
        android:id="@+id/bt_art"
        android:layout_width="92dp"
        android:layout_height="78dp"
        android:background="#FFFFFF"
        android:onClick="ButtonArt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.846"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageSlider"
        app:layout_constraintVertical_bias="0.062"
        app:srcCompat="@drawable/ic_art" />

    <ImageButton
        android:id="@+id/bt_edu"
        android:layout_width="98dp"
        android:layout_height="82dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.172"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageSlider"
        app:layout_constraintVertical_bias="0.677"
        app:srcCompat="@drawable/ic_edu" />

    <TextView
        android:id="@+id/text_music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/music_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.864"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_music"
        app:layout_constraintVertical_bias="0.155" />

    <TextView
        android:id="@+id/text_allev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/allev_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/bt_edu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.159"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_allev"
        app:layout_constraintVertical_bias="0.24" />

    <ImageButton
        android:id="@+id/bt_music"
        android:layout_width="91dp"
        android:layout_height="74dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageSlider"
        app:layout_constraintVertical_bias="0.687"
        app:srcCompat="@drawable/ic_music" />

</androidx.constraintlayout.widget.ConstraintLayout>